images url changed

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
           newsletter</button>
       </div>
       <div class="card-image">
-        <img src="../newsletter-sign-up-with-success-message-main/assets/images/illustration-sign-up-desktop.svg"
-          alt="ilustration image for frontendmentor.io">
+        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="ilustration image for frontendmentor.io">
       </div>
     </div>
   </main>
