--- a/success.html
+++ b/success.html
@@ -14,8 +14,7 @@
     <main class="container">
         <div class="success-card-continer">
             <div class="success-icon">
-                <img src="../newsletter-sign-up-with-success-message-main/assets/images/icon-success.svg"
-                    alt="Success icon from Frontend Mentor">
+                <img src="./assets/images/icon-success.svg" alt="Success icon from Frontend Mentor">
             </div>
             <h1 class="card-title">Thanks for subscribing!</h1>
             <p class="card-text ">A confirmation email has been sent to <strong>ash@loremcompany.com.</strong>
