--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           newsletter</button>
       </div>
       <div class="card-image">
-        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="ilustration image for frontendmentor.io">
+        <img class="card-ilustration" alt="ilustration image for frontendmentor.io">
       </div>
     </div>
   </main>
